# python-pt-br

./: .gitignore  00-OVERVIEW.md  01-ARCHITECTURE.md  02-KEYWORD_MAPPING.md  03-PROJECT_STRUCTURE.md  04-MVP_SCOPE.md  05-IMPLEMENTATION_PLAN.md  CHANGELOG.md  FUTURE_IDEAS.md  LICENSE  PHASE_4_3_TESTING.md  README.md  pt-br  pyproject.toml  pytest.ini  requirements.txt  setup.py  test_functions.py
docs/: FULL_GUIDE.md  GETTING_STARTED.md  QUICK_START.md  TESTING.md  TROUBLESHOOTING.md
examples/: conditionals.py  data_structures.py  functions.py  hello_world.py  loops.py  test_conditionals.py  test_functions.py  test_hello.py  test_module.py
pt_br/: __init__.py  __main__.py  mappings.py  translator.py  utils.py
tests/: test_coverage.py  test_integration.py  test_translator.py  test_utils.py
